Fixing the broken internal links (#345)
* Fixing the broken internal links

* Fixing two more broken links, adding ID for anchor target link.

--- a/packages/core/src/components/Dialog/Dialog.scss
+++ b/packages/core/src/components/Dialog/Dialog.scss
@@ -110,7 +110,7 @@ Style guide: components.dialog.react
 
 ## Related patterns
 
-- [Alert]({{root}}/components/alert)
+- [Alert](/components/alert)
 
 ## Learn more
 
